# my-little-robots

./: .gitignore  Cargo.toml  LICENSE  README.md
api/src/: lib.rs
backend/: Cargo.toml  build.rs
backend/frontend/: Cargo.toml
backend/frontend/src/: lib.rs
backend/src/: main.rs
backend/static/: index.html
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/example-player/: Cargo.toml
crates/example-player/scripts/: python-player.py
crates/example-player/src/: main.rs
crates/my-little-robots/: Cargo.toml
crates/my-little-robots/src/: application.rs  lib.rs  main.rs  map.rs  runner.rs  unit.rs
crates/my-little-robots/src/runner/: async_runner.rs  native_runner.rs  wasi_runner.rs
example-player/scripts/: python-player.py
example-player/src/: main.rs
mlr_py/src/: example_player.py
mlr_py/src/mlr_py/: api.py
my-little-robots/src/: battle.rs  bracket_lib.rs  lib.rs  map.rs
my-little-robots/src/map_builder/: cellular_automata.rs  mod.rs  prim.rs  snapshot.rs
my-little-robots/src/runner/: native_runner.rs  wasi_runner.rs
