[package]
name = "backend"
version = "0.1.0"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
env_logger = "0.7"
listenfd = "0.3"
rust-embed = "5.6.0"
mime_guess = "2.0.3"
wasm-pack = "0.9.1"
