[package]
name = "example-player"
version = "0.1.0"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"
rand = "0.7.3"
mlr_api = { path="../api" }
