[package]
name = "mlr"
version = "0.1.0"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
async-trait = "0.1.41"
anyhow = "1.0.33"
thiserror = "1.0.21"
futures = "0.3.6"
env_logger = "0.7.1"
async-std = "1.6"
log = "0.4.11"
bracket-lib = "0.8.1"
rand = "0.7.3"
async-watch = "0.3.1"
