[package]
name = "mlr"
version = "0.1.0"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
edition = "2018"
default-run = "mlr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
async-trait = "0.1.41"
anyhow = "1.0.33"
thiserror = "1.0.21"
futures = "0.3.6"
env_logger = "0.7.1"
async-std = "1.6"
log = "0.4.11"
bracket-lib = "0.8.1"
rand = "0.7.3"
async-watch = "0.3.1"
async-process = "1.0.1"
async-io = "1.1.10"
mlr_api = { path="../api" }
structopt = "0.3.20"
clap = { version = "2.33", default-features = false }
shell-words = "1.0.0"
itertools = "0.9.0"

wasmtime = "0.20.0"
wasmtime-wasi = "0.20.0"
wasi-common = "0.20.0"
